--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
+aniso8601==6.0.0
 astroid==2.2.5
 Click==7.0
 Flask==1.0.2
+Flask-RESTful==0.3.7
 isort==4.3.17
 itsdangerous==1.1.0
 Jinja2==2.10.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2==2.8.2
 pylint==2.3.1
+pytz==2019.1
 six==1.12.0
 typed-ast==1.3.5
 Werkzeug==0.15.2
